chore(ci): add java tool opts and limits cpu